--- a/client/src/Styles/Input.css
+++ b/client/src/Styles/Input.css
@@ -1,4 +1,5 @@
 .input__container {
+    display: flex;
     justify-content: start;
 }
 
@@ -6,5 +7,5 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 500px;
+    height: auto;
 }
