--- a/client/src/Styles/Pantry.css
+++ b/client/src/Styles/Pantry.css
@@ -1,7 +1,7 @@
 .pantry__container {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     width: 50%;
 }
