--- a/client/src/Styles/Navbar.css
+++ b/client/src/Styles/Navbar.css
@@ -4,9 +4,9 @@
 }
 
 .navbar__container {
+    padding-bottom: 10px;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     justify-content: center;
-    border: 1px solid black;
     background-color: #1DA1F2;
 }
