--- a/client/src/Styles/Pantry.css
+++ b/client/src/Styles/Pantry.css
@@ -1,13 +1,14 @@
 .pantry__container {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    width: 50%;
+    width: 80%;
+    height: 500px;
 }
 
 table {
-    border: 1px solid black;
+    border: 1px solid;
     justify-content: center;
     align-items: center;
     width: 100%;
