--- a/client/src/Styles/Ingredients.css
+++ b/client/src/Styles/Ingredients.css
@@ -5,6 +5,11 @@
     align-items: center;
     width: 60%;
     margin-left: 30px;
+    border: 1px solid;
+}
+
+.ingredients__list__container {
+    height: 100%;
 }
 
 .try__button__container {
