--- a/client/src/Styles/Pantry.css
+++ b/client/src/Styles/Pantry.css
@@ -1,16 +1,16 @@
 .pantry__container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     width: 80%;
-    height: 500px;
+    height: 300px;
 }
 
 table {
     border: 1px solid;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 200px;
 }
