--- a/client/src/Styles/UserInput.css
+++ b/client/src/Styles/UserInput.css
@@ -1,7 +1,7 @@
 .input__container {
     margin: 10%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     width: 90%;
 }
 
@@ -19,4 +19,5 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: auto;
 }
