--- a/client/src/Styles/Pantry.css
+++ b/client/src/Styles/Pantry.css
@@ -1,7 +1,7 @@
 .pantry__container {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     width: 80%;
     height: 300px;
