--- a/client/src/Styles/UserInput.css
+++ b/client/src/Styles/UserInput.css
@@ -1,8 +1,9 @@
-.input__container {
-    margin: 10%;
+.user__input__container {
+    margin: 50px;
     display: flex;
     justify-content: center;
     width: 90%;
+    margin-bottom: 0;
 }
 
 .items__container {
@@ -19,5 +20,5 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: auto;
+    height: 90%;
 }
