--- a/client/src/Styles/Ingredients.css
+++ b/client/src/Styles/Ingredients.css
@@ -1,7 +1,7 @@
 .ingredients__container {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     width: 60%;
     margin-left: 30px;
@@ -14,9 +14,16 @@
     width: 100%;
 }
 
-.try__button__container {
+.search__button__container {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+    width: 100%;
+}
+
+.back__button__container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 100%;
 }
