--- a/client/src/Styles/Recipes.css
+++ b/client/src/Styles/Recipes.css
@@ -5,4 +5,25 @@
     align-items: center;
     margin: 70px;
     margin-top: 20px;
+    height: 100%;
+}
+
+.food__image {
+    height: 150px;
+    width: 150px;
+}
+
+.recipes__container {
+    height: 85%
+}
+
+.recipe__info {
+    display: flex;
+}
+
+.recipe__button__container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    width: 100%; 
 }
