Feat: Adjust recipe cars for mobile

--- a/client/src/Styles/Recipes.css
+++ b/client/src/Styles/Recipes.css
@@ -19,6 +19,7 @@
 
 .recipe__info {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .recipe__buttons__container {
@@ -29,6 +30,7 @@
 }
 
 .raw__data {
+    width: 70%;
     margin: 10px;
     margin-top: 0;
 }
