--- a/client/src/Styles/Navbar.css
+++ b/client/src/Styles/Navbar.css
@@ -10,8 +10,21 @@
 .navbar__container {
     display: flex;
     align-items: flex-end;
-    justify-content: center;
+    justify-content: space-between;
     height: 10%;
     padding-bottom: 10px;
     background-color:  #3FC060;
+    width: 100%;
+}
+
+.logo__container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.button__container {
+    display: flex;
+    justify-content: center;
 }
