FeatL Reposition recipe buttons

--- a/client/src/Styles/Recipes.css
+++ b/client/src/Styles/Recipes.css
@@ -36,12 +36,13 @@
 
 .icons__container {
     display: flex;
+    justify-content: space-evenly;
 }
 .recipe__buttons__container {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    align-items: flex-end;
+    align-items: center;
     width: 100%; 
 }
 
