--- a/client/src/Styles/Recipes.css
+++ b/client/src/Styles/Recipes.css
@@ -8,6 +8,14 @@
     height: 100%;
 }
 
+.ingredients__container__plus {
+    height: 20%;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 .recipes__container {
     height: 85%
 }
