--- a/client/src/Styles/GroceryList.css
+++ b/client/src/Styles/GroceryList.css
@@ -2,6 +2,7 @@
     margin: 50px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    background-color: #f1ede1;
 }
 
 .food__image {
