--- a/client/src/Styles/SignIn.css
+++ b/client/src/Styles/SignIn.css
@@ -1,8 +1,16 @@
 .sign__in__container {
     width: 100%;
-    height: 100%;
+    height: 90%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.sign__in__form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 50%;
+    height: 90%;
 }
