--- a/client/src/Styles/GroceryList.css
+++ b/client/src/Styles/GroceryList.css
@@ -1,8 +1,21 @@
 .GroceryList__container {
-    margin: 50px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    background-color: #f1ede1;
+}
+
+.page__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 90%
+}
+
+.table__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 .food__image {
