--- a/client/src/Styles/Recipes.css
+++ b/client/src/Styles/Recipes.css
@@ -3,21 +3,21 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 70px;
-    margin-top: 20px;
-    height: 100%;
+    width: 100%;
+    height: 90%;
 }
 
 .ingredients__container__plus {
-    height: 20%;
+    height: 10%;
     width: 100%;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
-.recipes__container {
-    height: 85%
+.recipes__container {   
+    width: 90%;
+    height: 100%
 }
 .recipe__data__container {
     display: flex;
