--- a/client/src/Styles/UserInput.css
+++ b/client/src/Styles/UserInput.css
@@ -1,9 +1,10 @@
 .user__input__container {
-    margin: 50px;
     display: flex;
-    justify-content: center;
-    width: 90%;
-    margin-bottom: 0;
+    justify-content: space-between;
+    width: 80%;
+    height: 30%;
+    padding: 20px;
+    margin-bottom: 20px;
 }
 
 .items__container {
@@ -20,5 +21,5 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 90%;
 }
