--- a/client/src/Styles/Pantry.css
+++ b/client/src/Styles/Pantry.css
@@ -2,11 +2,13 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
-    width: 80%;
+    align-items: flex-start;
+    width: 90%;
     height: 400px;
 }
 
 .table__container {
     height: 100%;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
