--- a/client/src/Styles/GroceryList.css
+++ b/client/src/Styles/GroceryList.css
@@ -8,7 +8,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 90%
+    height: 93%;
+    padding-top: 7%; 
 }
 
 .table__container {
