--- a/client/src/Styles/Navbar.css
+++ b/client/src/Styles/Navbar.css
@@ -1,6 +1,6 @@
 #stirfry__gif {
-    height: 80px;
-    width: 80px;
+    height: 50px;
+    width: 50px;
 }
 
 #app__name {
@@ -8,13 +8,14 @@
 }
 
 .navbar__container {
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-    height: 9%;
-    padding-bottom: 10px;
-    background-color:  #3FC060;
+    height: 10%;
     width: 100%;
+}
+
+.navBar {
+    justify-content: center;
+    align-items: center;
+    height: 7%;
 }
 
 .logo__container {
