--- a/client/src/Styles/Recipes.css
+++ b/client/src/Styles/Recipes.css
@@ -4,10 +4,12 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 91%;
+    height: 100%;
+    padding-top: 5%;
 }
 
 .ingredients__container__plus {
+
     height: 7%;
     width: 100%;
     flex-direction: row;
@@ -21,7 +23,7 @@
 
 .recipes__container {   
     width: 90%;
-    height: 91%;
+    height: 90%;
 }
 .recipe__data__container {
     display: flex;
