--- a/client/src/Styles/SignIn.css
+++ b/client/src/Styles/SignIn.css
@@ -1,6 +1,7 @@
 .sign__in__container {
     width: 100%;
-    height: 90%;
+    height: 93%;
+    padding-top: 7%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,5 +13,5 @@
     align-items: center;
     flex-direction: column;
     width: 50%;
-    height: 90%;
+    height: 93%;
 }
