--- a/client/src/Styles/UserInput.css
+++ b/client/src/Styles/UserInput.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     width: 90%;
-    height: 30%;
+    height: 37%;
     padding: 20px;
     margin-bottom: 20px;
 }
@@ -21,5 +21,6 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 90%;
+    height: 93%;
+    padding-top: 7%;
 }
