--- a/client/src/Styles/Pantry.css
+++ b/client/src/Styles/Pantry.css
@@ -4,7 +4,9 @@
     justify-content: flex-start;
     align-items: flex-start;
     width: 90%;
-    height: 400px;
+    height: 68%;
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
 
 .table__container {
