--- a/client/src/Styles/UserInput.css
+++ b/client/src/Styles/UserInput.css
@@ -2,9 +2,8 @@
     display: flex;
     justify-content: space-between;
     width: 90%;
-    height: 37%;
+    height: 30%;
     padding: 20px;
-    margin-bottom: 20px;
 }
 
 .items__container {
@@ -18,9 +17,9 @@
 .home__top {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 93%;
-    padding-top: 7%;
+    height: 100%;
+    padding-top: 5%;
 }
