--- a/client/src/Styles/Pantry.css
+++ b/client/src/Styles/Pantry.css
@@ -11,6 +11,6 @@
 
 .table__container {
     height: 100%;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
 }
