--- a/client/src/Styles/Pantry.css
+++ b/client/src/Styles/Pantry.css
@@ -10,7 +10,8 @@
 }
 
 .table__container {
-    height: 100%;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
