--- a/client/src/Styles/UserInput.css
+++ b/client/src/Styles/UserInput.css
@@ -23,3 +23,16 @@
     height: 100%;
     padding-top: 5%;
 }
+
+.input__and__buttons__container {
+    width: 40%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.buttons__container {
+    width: 100%;
+    height: 40%;
+}
