--- a/client/src/Styles/UserInput.css
+++ b/client/src/Styles/UserInput.css
@@ -1,9 +1,8 @@
 .user__input__container {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     width: 90%;
     height: 30%;
-    padding: 20px;
 }
 
 .items__container {
@@ -25,6 +24,7 @@
 }
 
 .input__and__buttons__container {
+    padding: 2%;
     width: 40%;
     height: 100%;
     display: flex;
@@ -32,7 +32,22 @@
     justify-content: center;
     align-items: center;
 }
-.buttons__container {
+
+.input__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
+    height: 70%;
+    /* background-color: red; */
+}
+
+.add__button__container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
     height: 40%;
 }
