--- a/client/src/Styles/GroceryList.css
+++ b/client/src/Styles/GroceryList.css
@@ -1,9 +1,3 @@
-.groceryList__container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr min-content);
-    grid-auto-rows: 1fr;
-}
-
 .page__container {
     display: flex;
     justify-content: center;
@@ -12,10 +6,21 @@
     height: 100%;
     padding-top: 5%; 
 }
+.list__card__container {
+    width: 100%;
+    height: 100%;
+}
+
+.grocery__lists__container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr min-content);
+    grid-auto-rows: 550px;
+}
+
 
 .recipe__image__container {
     width: 100%;
-    height: 30%;
+    height: 40%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -23,8 +28,7 @@
 }
 
 .recipe__image {
-    padding-bottom: 2%;
-    height: 100%;
+    height: 80%;
     width: 60%;
 }
 
@@ -36,23 +40,17 @@
     font-size: 1em;
 }
 
-.list__card__container {
-    width: 100%;
-    height: 28%;
-}
 
 .list__card {
     margin: 30px;
     padding: 30px;
     width: 90%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: lightblue; */
     flex-direction: column;
 }
-
-
 
 .buttons__container {
     display: flex;
