style: add margin to ingredient buttons

--- a/client/src/Styles/Ingredients.css
+++ b/client/src/Styles/Ingredients.css
@@ -9,6 +9,8 @@
 }
 
 .ingredients__list__container {
+    display: flex;
+    flex-direction: row;
     border: 1px solid;
     padding: 10px;
     height: 100%;
