--- a/client/src/Styles/Ingredients.css
+++ b/client/src/Styles/Ingredients.css
@@ -11,7 +11,8 @@
 .ingredients__list__container {
     display: flex;
     flex-direction: row;
-    border: 1px solid;
+    border: 2px solid #3FC060;
+    border-radius: 10px;
     padding: 10px;
     height: 100%;
     width: 100%;
