fix: resolve ract hook warnings

--- a/client/src/Styles/Recipes.css
+++ b/client/src/Styles/Recipes.css
@@ -55,7 +55,7 @@
     font-size: 20px;
 }
 
-.ingredients__container {
+.ingredientsList__container {
     padding: 20px;
     overflow:hidden;
     height: 50%;
